--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.7",
     "sweetalert2": "^11.12.2",
